--- a/css/arrange.css
+++ b/css/arrange.css
@@ -1,6 +1,6 @@
 /**
  * Arrange
- * A very, very basic grid system, a bit like Skeleton
+ * A very basic grid system, a bit like Skeleton
  *
  * Copyright (c) 2013, Fred LeBlanc
  * All rights reserved.
@@ -32,8 +32,6 @@
  * POSSIBILITY OF SUCH DAMAGE.
  */
 
-
-
 /**
  * Base Structure
  * ----------------------------------------------------------------------------
@@ -46,69 +44,67 @@
  * you'll probably want to extend this with a max-width and width.
  */
 .container,
-.row,
-section {
-   position: relative;
-   margin: 0 auto;
-   padding: 0;
-   *zoom: 1;
+.row {
+	position: relative;
+	margin: 0 auto;
+	padding: 0;
+	*zoom: 1;
 }
 
-   .container:before,
-   .container:after,
-   .row:before,
-   .row:after,
-   section:before,
-   section:after {
-      content: " ";
-      display: table;
-   }
+.container:before,
+.container:after,
+.row:before,
+.row:after {
+	content: " ";
+	display: table;
+}
 
-   .container:after,
-   .row:after,
-   section:after {
-      clear: both;
-   }
-
+.container:after,
+.row:after {
+	clear: both;
+}
 
 /**
  * Defines the basics of what a grid column will be
  */
+.row .column,
+.row .columns,
 .container .column,
 .container .columns {
-   float: left;
-   display: inline;
-   margin: 0 0 0 2%;
+	float: left;
+	display: inline;
+	margin: 0 0 0 3%;
 }
 
-   .container .column:first-child,
-   .container .columns:first-child {
-      margin-left: 0 !important;
-   }
-
-
-.row,
-section {
-   margin-bottom: 1em;
+.row .column:first-child,
+.row .columns:first-child,
+.container .column:first-child,
+.container .columns:first-child {
+	margin-left: 0 !important;
 }
 
-
+.row {
+	margin-bottom: 1.5em;
+}
 
 /**
  * Grid Structure
  * ----------------------------------------------------------------------------
  * The following styles create grid columns in percentages.
+ *
  * Terminology:
- *    column - 6.5% - a single-width column of content
- *    gap    - 2.0% - room between content columns
+ *    column - 5.583333% - a single-width column of content
+ *    gap    - 3.0% - room between content columns
+ *
  * The math:
- *    width  = (# of columns * 6.5%) + ((# of columns - 1) * 2%) 
+ *    width  = (# of columns * 5.583333%) + ((# of columns - 1) * 3.0%) 
  */
+
 .twelfth.column,
 .twelfth.columns,
 .one.column,
 .one.columns {
-   width: 6.5%
+	width: 5.583333%
 }
 
 .sixth.column,
@@ -117,7 +113,7 @@ section {
 .one-sixth.columns,
 .two.column,
 .two.columns {
-   width: 15%;
+	width: 14.166667%;
 }
 
 .quarter.column,
@@ -128,7 +124,7 @@ section {
 .one-fourth.columns,
 .three.column,
 .three.columns {
-   width: 23.5%;
+	width: 22.75%;
 }
 
 .third.column,
@@ -137,12 +133,12 @@ section {
 .one-third.columns,
 .four.column,
 .four.columns {
-   width: 32%;
+	width: 31.333333%;
 }
 
 .five.column,
 .five.columns {
-   width: 40.5%;
+	width: 39.916667%;
 }
 
 .half.column,
@@ -151,19 +147,19 @@ section {
 .one-half.columns,
 .six.column,
 .six.columns {
-   width: 49%;
+	width: 48.5%;
 }
 
 .seven.column,
 .seven.columns {
-   width: 57.5%;
+	width: 57.083333%;
 }
 
 .two-thirds.column,
 .two-thirds.columns,
 .eight.column,
 .eight.columns {
-   width: 66%;
+	width: 65.666667%;
 }
 
 .three-quarters.column,
@@ -172,26 +168,25 @@ section {
 .three-forths.columns,
 .nine.column,
 .nine.columns {
-   width: 74.5%;
+	width: 74.25%;
 }
 
 .ten.column,
 .ten.columns {
-   width: 83%;
+	width: 82.833333%;
 }
 
 .eleven.column,
 .eleven.columns {
-   width: 91.5%;
+	width: 91.416667%;
 }
 
 .full.column,
 .full.columns,
 .twelve.column,
 .twelve.columns {
-   width: 100%;
+	width: 100%;
 }
-
 
 
 /**
@@ -201,61 +196,60 @@ section {
  */
 
 .offset-by-one {
-   padding-left: 8.5%;
+	padding-left: 8.583333%;
 }
 
 .offset-by-sixth,
 .offset-by-one-sixth,
 .offset-by-two {
-   padding-left: 17%;
+	padding-left: 17.166667%;
 }
 
 .offset-by-quarter,
 .offset-by-one-quarter,
 .offset-by-one-fourth,
 .offset-by-three {
-   padding-left: 25.5%;
+	padding-left: 25.75%;
 }
 
 .offset-by-third,
 .offset-by-one-third,
 .offset-by-four {
-   padding-left: 34%;
+	padding-left: 34.333333%;
 }
 
 .offset-by-five {
-   padding-left: 42.5%;
+	padding-left: 42.916667%;
 }
 
 .offset-by-half,
 .offset-by-one-half,
 .offset-by-six {
-   padding-left: 51%;
+	padding-left: 51.5%;
 }
 
 .offset-by-seven {
-   padding-left: 59.5%;
+	padding-left: 60.083333%;
 }
 
 .offset-by-two-thirds,
 .offset-by-eight {
-   padding-left: 68%;
+	padding-left: 68.666667%;
 }
 
 .offset-by-three-quarters,
 .offset-by-three-fourths,
 .offset-by-nine {
-   padding-left: 76.5%;
+	padding-left: 77.25%;
 }
 
 .offset-by-ten {
-   padding-left: 85%;
+	padding-left: 85.833333%;
 }
 
 .offset-by-eleven {
-   padding-left: 93.5%;
+	padding-left: 94.416667%;
 }
-
 
 
 /**
@@ -269,31 +263,30 @@ section {
  * http://nicolasgallagher.com/micro-clearfix-hack/
  */
 .clearfix {
-   *zoom: 1;
+	*zoom: 1;
 }
-   
-   .clearfix:before,
-   .clearfix:after {
-      content: " ";
-      display: table;
-   }
-   
-   .clearfix:after {
-      clear: both;
-   }
-   
+
+.clearfix:before,
+.clearfix:after {
+	content: " ";
+	display: table;
+}
+
+.clearfix:after {
+	clear: both;
+}
 
 /**
  * This class is best used width <br> or <hr>
  */
 .clear {
-   clear: both;
-   display: block;
-   overflow: hidden;
-   visibility: hidden;
-   margin: 0;
-   padding: 0;
-   width: 0;
-   height: 0;
-   border: 0;
+	clear: both;
+	display: block;
+	overflow: hidden;
+	visibility: hidden;
+	margin: 0;
+	padding: 0;
+	width: 0;
+	height: 0;
+	border: 0;
 }
