Add perforation lines within the code for easy separating

--- a/css/arrange.css
+++ b/css/arrange.css
@@ -392,6 +392,9 @@ br.clear {
 }
 
 
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+
 /**
  * Reversing (optional)
  * ----------------------------------------------------------------------------
@@ -580,6 +583,9 @@ br.clear {
 	margin-left: 0 !important;
 	margin-right: 94.416667% !important;
 }
+
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
 
 /**
